# DynamicLearnedIndex

./: .gitmodules  AvlTree.h  CHTree.h  CMakeLists.txt  CQTree.h  README.md  main.cpp  output_parser.py  smalltest.sh  submit.sh  tester.cpp  util.h
convex_hull/: AvlTree.h  CHTree.h  RankHullTree.h  smalltest.cpp
learned_index/: LearnedIndex.h  LineTree.h  tester.cpp
out_raw/: CGALcircle_20.out  CGALnorm_20.out  CGALtrunc_20.out  CGALunif_20.out  CHcircle_20.out  CHnorm_20.out  CHtrunc_20.out  CHunif_20.out  CQcircle_18.out  CQnorm_18.out  CQtrunc_18.out  CQunif_18.out  GAcircle_20.out  GAnorm_20.out  GAtrunc_20.out  GAunif_20.out
